improving gc for large seq